--- a/assets/index.css
+++ b/assets/index.css
@@ -132,7 +132,18 @@ h1 {
     width: 100%;
     min-height: 40%;
     bottom: 0;
+    background-color:rgba(110, 170, 250, 0.2);
+    overflow-y: hidden;
+    z-index: -12;
+}
+
+.bottomContainer {
+    position: absolute;
+    width: 100%;
+    height: 40%;
+    bottom: 0;
     left: 0;
+    right: 0;
     background-color:rgba(110, 170, 250, 0.2);
     overflow-y: hidden;
     z-index: -12;
@@ -186,7 +197,7 @@ h1 {
     }
     .colon {
         font-size: 38px;
-        line-height: 1rem;
+        line-height: 2rem;
     }
     #goal {
         transform: scale(0.8);
