--- a/assets/index.css
+++ b/assets/index.css
@@ -35,6 +35,7 @@ body {
     position: absolute;
     min-width: 100%;
     height: 100%;
+    max-height: 100%;
     justify-content: center;
     margin: 0 auto;
     overflow: hidden;
@@ -130,16 +131,6 @@ h1 {
 .bottomContainer {
     position: absolute;
     width: 100%;
-    min-height: 40%;
-    bottom: 0;
-    background-color:rgba(110, 170, 250, 0.2);
-    overflow-y: hidden;
-    z-index: -12;
-}
-
-.bottomContainer {
-    position: absolute;
-    width: 100%;
     height: 40%;
     bottom: 0;
     left: 0;
@@ -224,6 +215,11 @@ h1 {
         border-radius: 2px 14px;
         font-size: 28px;
     }
+
+    .bottomContainer {
+        height: 20%;
+    }
+
     #goal {
         margin-top: 5rem;
         margin-right: 5rem;
