--- a/assets/index.css
+++ b/assets/index.css
@@ -2,25 +2,25 @@
 Avalanche blue #2596be;
 */
 
-@font-face {
-    font-family: "DSEG7-Classic-Bold";
-    src: url(fonts/DSEG7Classic-Bold.woff);
-}
-
 html, body {
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     margin: 0;
+    padding: 0;
 }
 
 body {
-    width: 100%; 
-    max-height: 100%;
     overflow: hidden;
     background: url(images/concrete_seamless.png);
     background-size: contain;
     background-attachment: fixed;
     margin: 0;
+}
+
+@font-face {
+    font-family: "DSEG7-Classic-Bold";
+    src: url(fonts/DSEG7Classic-Bold.woff);
 }
 
 .wrapper {
