--- a/assets/index.css
+++ b/assets/index.css
@@ -5,15 +5,18 @@ Avalanche blue #2596be;
 html, body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 body {
     background: url(images/concrete_seamless.png);
     background-size: contain;
     background-attachment: fixed;
+    position: absolute;
+    top: 0;
+    bottom: 0;
 }
 
 @font-face {
@@ -28,11 +31,11 @@ body {
     display: -webkit-flex;
     display: flex;
     position: absolute;
-    min-width: 100%;
+    width: 100%;
     height: 100%;
+    padding: 0;
+    margin: 0;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
     overflow: hidden;
 }
 
@@ -197,6 +200,11 @@ h1 {
 }
 
 @media screen and (max-device-width: 768px) and (orientation: landscape) {
+    
+    .wrapper {
+        height: 100vh;
+    }
+
     h1 {
         margin: 2rem;
         font-size: 32px;
