--- a/assets/index.css
+++ b/assets/index.css
@@ -4,7 +4,7 @@ Avalanche blue #2596be;
 
 html, body {
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -14,7 +14,6 @@ body {
     background: url(images/concrete_seamless.png);
     background-size: contain;
     background-attachment: fixed;
-    overflow-y: hidden;
 }
 
 @font-face {
@@ -54,7 +53,9 @@ h1 {
 }
 
 .clockContainer {
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 60%;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -131,11 +132,12 @@ h1 {
 
 .bottomContainer {
     position: absolute;
-    min-width: 100%;
+    transform: rotateZ(0deg);
+    width: 100%;
     height: 40%;
+    white-space: pre-wrap;
     bottom: 0;
     background-color:rgba(110, 170, 250, 0.2);
-    overflow-y: hidden;
     z-index: -16;
 }
 
@@ -143,31 +145,19 @@ h1 {
     position: relative;
     float: right;
     margin-top: 7rem;
-    margin-right: 15rem;
+    margin-right: 12rem;
     margin-bottom: 3rem;
     filter: drop-shadow(0 0 1px rgba(134, 134, 134, 0.8));
     transform: scale(1.3);
     z-index: 12;
 }
 
-/* 
-#cup {
-    position: absolute;
-    margin: 0 auto;
-    right: 60%;
-    padding: auto;
-    transform: scale(0.2);
-    opacity: 30%;
-    z-index: 44;
-}
-*/
-
 
 @media screen and (max-width: 768px) {
-    body {
-        max-height: 90%;
-    }
 
+    body {
+        max-height: 100%;
+    }
     h1 {
         margin: 2rem;
         font-size: 26px;
@@ -187,12 +177,12 @@ h1 {
         font-size: 24px;
         justify-content: center;
     }
-    #days {
-        padding-right: 18px;
-    }
     .colon {
         font-size: 38px;
         line-height: 2rem;
+    }
+    .bottomContainer {
+        bottom: 0;
     }
     #goal {
         transform: scale(0.8);
@@ -201,7 +191,7 @@ h1 {
     }
 }
 
-@media screen and (max-device-width: 768px) and (orientation: landscape) {
+@media screen and (max-width: 768px) and (orientation: landscape) {
     
     h1 {
         margin: 2rem;
@@ -219,18 +209,18 @@ h1 {
         margin: 0 auto;
         padding: 3px 21px;
         border-radius: 2px 14px;
-        font-size: 34px;
-    }
-    #days {
-        padding-right: 5rem;
+        font-size: 30px;
     }
     .colon {
         font-size: 50px;
         line-height: 2rem;
     }
+    #days {
+        padding-right: 6rem;
+    }
     #goal {
         margin-top: 4rem;
-        margin-right: 7rem;
+        margin-right: 8rem;
         transform: none;
     }
 }
