--- a/assets/index.css
+++ b/assets/index.css
@@ -10,12 +10,6 @@ html, body {
     overflow: hidden;
 }
 
-body {
-    background: url(images/concrete_seamless.png);
-    background-size: contain;
-    background-attachment: fixed;
-}
-
 @font-face {
     font-family: "DSEG7-Classic-Bold";
     src: url(fonts/DSEG7Classic-Bold.woff);
@@ -30,10 +24,14 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
+    background: url(images/concrete_seamless.png);
+    background-size: contain;
+    background-attachment: fixed;
     padding: 0;
     margin: 0;
     justify-content: center;
     overflow: hidden;
+    z-index: -100;
 }
 
 h1 {
@@ -155,9 +153,6 @@ h1 {
 
 @media screen and (max-width: 768px) {
 
-    body {
-        max-height: 100%;
-    }
     h1 {
         margin: 2rem;
         font-size: 26px;
@@ -180,11 +175,6 @@ h1 {
     .colon {
         font-size: 38px;
         line-height: 2rem;
-    }
-    .bottomContainer {
-        height: 60%;
-        margin-top: 60%;
-        overflow-y: hidden;
     }
     #days {
         padding-right: 18px;
