--- a/assets/index.css
+++ b/assets/index.css
@@ -40,20 +40,33 @@ h1 {
     margin-bottom: 1rem;
     font-family: 'Bungee', 'Oxanium', 'Helvetica', sans-serif;
     font-size: 64px;
-    opacity: 80%;
+    font-display: swap;
+    opacity: 90%;
     text-align: center;
     letter-spacing: 0.3rem;
     color: #5d1d31;
     border: none;
-    outline: none;
+    text-decoration: ;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
 }
 
-.clockContainer {
+.logoContainer {
     position: absolute;
     width: 100%;
     height: 60%;
+    top: 0;
+    background-image: url(images/avalanche.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0 auto;
+    opacity: 30%;
+    z-index: -20;
+}
+
+.clockContainer {
+    position: relative;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -78,13 +91,14 @@ h1 {
     padding: 2rem 4rem;
     font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
     font-size: 68px;
+    font-display: swap;
     text-align: center;
     text-align: left;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    background-color: rgba(110, 170, 250, 0.2);
+    background-image: repeating-linear-gradient(rgba(110, 170, 250, 0.2), rgba(110, 170, 250, 0.6));
     color: #5d1d31;
-    border: 1px solid rgba(110, 170, 250, 0.3);
+    border: 1px solid rgba(110, 170, 250, 0.3); 
     border-bottom: 1px solid rgba(110, 170, 250, 0.3);
     box-shadow: 0 0 1px #143b91;
     border-radius: 5px 35px;
@@ -114,20 +128,6 @@ h1 {
         100% { opacity: 80%; }
     }
 
-.logoContainer {
-    position: absolute;
-    width: 100%;
-    height: 60%;
-    top: 0;
-    background-image: url(images/avalanche.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin: 0 auto;
-    opacity: 20%;
-    z-index: -20;
-}
-
 .bottomContainer {
     position: absolute;
     transform: rotateZ(0deg);
@@ -145,7 +145,7 @@ h1 {
     margin-top: 7rem;
     margin-right: 12rem;
     margin-bottom: 3rem;
-    filter: drop-shadow(0 0 1px rgba(134, 134, 134, 0.8));
+    filter: drop-shadow(0 0 4px rgba(88, 88, 88, 0.8));
     transform: scale(1.3);
     z-index: 12;
 }
@@ -180,9 +180,9 @@ h1 {
         padding-right: 18px;
     }
     #goal {
-        transform: scale(0.8);
+        transform: scale(0.9);
         margin-top: 5rem;
-        margin-right: 3rem;
+        margin-right: 2.5rem;
     }
 }
 
@@ -190,7 +190,7 @@ h1 {
     
     h1 {
         margin: 2rem;
-        font-size: 32px;
+        font-size: 48px;
     }
     .clockContainer {
         margin-top: 7rem;
