--- a/assets/index.css
+++ b/assets/index.css
@@ -2,11 +2,12 @@
 Avalanche blue #2596be;
 */
 
-
 @font-face {
     font-family: "DSEG7-Classic-Bold";
     src: url(fonts/DSEG7Classic-Bold.woff);
 }
+
+
 
 html, body {
     width: 100%;
@@ -20,8 +21,10 @@ h1 {
     position: absolute;
     margin-top: 3rem;
     margin-bottom: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     font-family: 'Bungee', 'Oxanium', 'Helvetica', sans-serif;
-    font-size: 64px;
+    font-size: 4vw;
     font-display: swap;
     text-align: center;
     text-decoration: none;
@@ -30,23 +33,10 @@ h1 {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     color: #5d1d31;
-    opacity: 88%;
     border: none;
+    text-shadow: 1px 2px antiquewhite;
     z-index: 30;
-    background: linear-gradient(to right,#ff8b8b 0, #5d1d31 1.33%, #5d1d31);
-    background-position: 0;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-size-adjust: none;
-    animation: shine 12s infinite linear;
-    animation-fill-mode: forwards;
 }
-    @keyframes shine {
-        0% { background-position: 0; }
-        50% { background-position: 71rem; }
-        100% { background-position: 76.25rem }
-    }
 
 .wrapper {
     display: -webkit-box;
@@ -83,6 +73,7 @@ h1 {
 }
 
 .clock {
+    display: inline-block;
     min-width: 6rem;
     max-width: 5rem;
     top: 28%;
@@ -91,7 +82,7 @@ h1 {
     margin: 0 2rem;
     padding: 2rem 4rem;
     font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
-    font-size: 68px;
+    font-size: 4.5rem;
     font-display: swap;
     text-align: center;
     -moz-osx-font-smoothing: grayscale;
@@ -177,12 +168,12 @@ h1 {
     .clock { 
         min-width: 3rem;
         max-width: 3rem;
-        height: 1rem;
-        line-height: 1rem;
+        height: 1.5rem;
+        line-height: 1.5rem;
         margin: 0 0.5rem;
         padding: 8px 12px;
         border-radius: 2px 14px;
-        font-size: 24px;
+        font-size: 26px;
         justify-content: center;
     }
     .colon {
@@ -193,9 +184,8 @@ h1 {
         padding-right: 18px;
     }
     #goal {
-        transform: scale(0.9);
-        margin-top: 5rem;
-        margin-right: 2.5rem;
+        margin-top: 6rem;
+        margin-right: 1rem;
     }
     @keyframes shine {
         0% { background-position: 0; }
@@ -230,40 +220,6 @@ h1 {
     #goal {
         margin-top: 4rem;
         margin-right: 8rem;
-        transform: none;
-    }
-}
-
-
-@media screen and (max-width: 768px) and (orientation: landscape) {
-    h1 {
-        margin: 2rem;
-        font-size: 28px;
-    }
-    .clockContainer {
-        margin-top: 7rem;
-        margin-bottom: 1rem;
-    }
-    .clock {
-        min-width: 5rem;
-        max-width: 5rem;
-        height: 2rem;
-        line-height: 2rem;
-        margin: 0 auto;
-        padding: 3px 21px;
-        border-radius: 2px 14px;
-        font-size: 34px;
-    }
-    .colon {
-        font-size: 50px;
-        line-height: 2rem;
-    }
-    #days {
-        padding-right: 28px;
-    }
-    #goal {
-        margin-top: 2rem;
-        margin-right: 7rem;
         transform: none;
     }
 }
