--- a/assets/animation.css
+++ b/assets/animation.css
@@ -6,7 +6,7 @@
     float: left;
     bottom: 0;
     transform: rotateZ(45deg);
-    z-index: 6;
+    z-index: 12;
     overflow: hidden;
 }
 
@@ -36,7 +36,7 @@
     position: absolute;
     bottom: calc(50% - 1px);
     right: 0;
-    height: 6px;
+    height: 7px;
     background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgb(0, 0, 0), rgba(0, 0, 255, 0));
     border-radius: 100%;
     animation: puckShadow 7000ms ease-in-out infinite;
@@ -112,10 +112,10 @@
         width: 0;
    }
     30% {
-        width: 2.5em;
+       width: 2.5em;
    }
     100% {
-        width: 0;
+        width: 0.1em;
    }
 }
 @keyframes puckShadow {
@@ -123,7 +123,7 @@
         width: 1em;
    }
     50% {
-        width: 1.27em;
+        width: 1.25em;
    }
     100% {
         width: 0;
@@ -135,7 +135,7 @@
         transform: translateX(0);
    }
     100% {
-        transform: translateX(580px);
+        transform: translateX(570px);
    }
 }
 
@@ -145,7 +145,7 @@
             transform: translateX(0);
        }
         100% {
-            transform: translateX(85rem);
+            transform: translateX(85vw);
        }
     }
   }
@@ -155,12 +155,16 @@
         float: left;
     }
 
+    .hockeyPuck::after {
+        height: 9px;
+    }
+
     @keyframes hockeyPuck {
         0% {
             transform: translateX(0);
        }
         100% {
-            transform: translateX(92rem);
+            transform: translateX(88vw);
        }
     }
 }
