--- a/assets/index.css
+++ b/assets/index.css
@@ -19,22 +19,21 @@ html, body {
 
 h1 {
     position: absolute;
-    margin-top: 3rem;
+    margin-top: 3.3rem;
     margin-bottom: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
     font-family: 'Bungee', 'Oxanium', 'Helvetica', sans-serif;
-    font-size: 4vw;
+    font-size: 72px;
     font-display: swap;
     text-align: center;
     text-decoration: none;
     letter-spacing: 0.3rem;
-    white-space: nowrap;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     color: #5d1d31;
     border: none;
-    text-shadow: 1px 2px antiquewhite;
+    text-shadow: 0 1.3px #410517;
     z-index: 30;
 }
 
@@ -73,7 +72,6 @@ h1 {
 }
 
 .clock {
-    display: inline-block;
     min-width: 6rem;
     max-width: 5rem;
     top: 28%;
@@ -81,7 +79,8 @@ h1 {
     line-height: 4rem;
     margin: 0 2rem;
     padding: 2rem 4rem;
-    font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
+    padding-right: 5rem;
+    font-family: DSEG7-Classic-Bold, Helvetica, sans-serif;
     font-size: 4.5rem;
     font-display: swap;
     text-align: center;
@@ -92,19 +91,20 @@ h1 {
     border: 0.5px solid rgba(110, 170, 250, 0.3); 
     border-bottom: 1px solid rgba(110, 170, 250, 0.3);
     box-shadow: 0 0 1px #143b91;
-    border-radius: 5px 35px;
+    border-radius: 6px 30px;
     outline: none;
-    z-index: 12;
+    z-index: 20;
 }
 
 #days {
-    padding-right: 8rem;
+    padding-right: 8.5rem;
 }
 
 .colon {
     position: relative;
     color:#6b283d;
-    font-size: 90px;
+    font-size: 7rem;
+    line-height: 7rem;
     opacity: 90%;
 }
 
@@ -147,19 +147,19 @@ h1 {
 #goal {
     position: relative;
     float: right;
-    margin-top: 7rem;
-    margin-right: 12rem;
+    margin-top: 8rem;
+    margin-right: 20rem;
     margin-bottom: 3rem;
     filter: drop-shadow(0 0 4px rgba(88, 88, 88, 0.8));
-    transform: scale(1.4);
+    transform: scale(1.7);
     z-index: 12;
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 640px) and (orientation: portrait) {
     h1 {
         margin: 2rem;
-        font-size: 30px;
+        font-size: 28px;
     }
     .clockContainer {
         margin-left: 1rem;
@@ -171,7 +171,7 @@ h1 {
         height: 1.5rem;
         line-height: 1.5rem;
         margin: 0 0.5rem;
-        padding: 8px 12px;
+        padding: 8px 14px;
         border-radius: 2px 14px;
         font-size: 26px;
         justify-content: center;
@@ -184,8 +184,9 @@ h1 {
         padding-right: 18px;
     }
     #goal {
+        transform: scale(0.95);
         margin-top: 6rem;
-        margin-right: 1rem;
+        margin-right: 1.5rem;
     }
     @keyframes shine {
         0% { background-position: 0; }
