--- a/assets/index.css
+++ b/assets/index.css
@@ -7,8 +7,6 @@ Avalanche blue #2596be;
     src: url(fonts/DSEG7Classic-Bold.woff);
 }
 
-
-
 html, body {
     width: 100%;
     height: 100%;
@@ -73,7 +71,7 @@ h1 {
 
 .clock {
     min-width: 6rem;
-    max-width: 5rem;
+    max-width: 6rem;
     top: 28%;
     height: 4rem;
     line-height: 4rem;
@@ -160,6 +158,7 @@ h1 {
     h1 {
         margin: 2rem;
         font-size: 28px;
+        text-shadow: none;
     }
     .clockContainer {
         margin-left: 1rem;
@@ -195,32 +194,35 @@ h1 {
     }  
 }
 
-@media screen and (max-width: 768px) and (orientation: landscape) {
+@media screen and (max-device-width: 768px) and (max-width: 991px) and (orientation: landscape) {
     h1 {
         margin: 2rem;
-        font-size: 28px;
+        font-size: 32px;
     }
     .clockContainer {
         margin-top: 7rem;
         margin-bottom: 1rem;
     }
     .clock {
-        min-width: 5rem;
-        max-width: 5rem;
-        height: 3rem;
-        line-height: 3rem;
+        min-width: 4.5rem;
+        max-width: 4.5rem;
+        height: 2rem;
+        line-height: 2rem;
         margin: 0 auto;
-        padding: 3px 21px;
+        padding: 5px 23px;
         border-radius: 2px 14px;
-        font-size: 30px;
+        font-size: 34px;
     }
     .colon {
         font-size: 50px;
         line-height: 2rem;
     }
+    #days {
+        padding-right: 28px;
+    }
     #goal {
-        margin-top: 4rem;
-        margin-right: 8rem;
-        transform: none;
+        margin-top: 3rem;
+        margin-right: 7rem;
+        transform: scale(1.0);
     }
 }
